# qbitunregistered

./: .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  app.py  config.json.example  config.py  config.py.example  pyproject.toml  pytest.ini  qbitunregistered.py  requirements.txt  scheduler.py
.github/workflows/: ci.yml  claude-code-review.yml
qbitunregistered/utils/: config_validator.py
scripts/: auto_remove.py  auto_tmm.py  create_hardlinks.py  orphaned.py  seeding_management.py  tag_by_age.py  tag_by_tracker.py  tag_cross_seeding.py  torrent_management.py  unregistered_checks.py
static/css/: style.css
static/js/: main.js
templates/: home.html  torrents.html
tests/: __init__.py  conftest.py  test_cache.py  test_config_validator.py  test_file_operations.py  test_impact_analyzer.py  test_notifications.py  test_orphaned.py  test_tag_operations.py  test_unregistered_checks.py  test_webhooks.py
utils/: README.md  __init__.py  cache.py  config_validator.py  events.py  file_operations.py  impact_analyzer.py  notifications.py  rate_limiter.py  tracker_matcher.py  types.py  webhooks.py
