[project]
name = "qbitunregistered"
version = "1.0.0"
description = "Automated qBittorrent management tool for handling orphaned files, unregistered torrents, and more"
requires-python = ">=3.9"
dependencies = [
    "qbittorrent-api>=2024.1.59",
    "schedule>=1.2.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
