[project]
name = "qbitunregistered"
version = "2.0.0"
description = "Automated qBittorrent management tool for handling orphaned files, unregistered torrents, and more"
requires-python = ">=3.9"
dependencies = [
    "qbittorrent-api>=2024.11.69",  # Aligns with Python 3.9+ requirement
    "schedule>=1.2.0",
    "tqdm>=4.66.3",  # Security fix for CLI injection vulnerability
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "types-requests>=2.31.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 127
target-version = ['py39', 'py310', 'py311', 'py312']
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | web
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "web/",
    "venv/",
    ".venv/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "smoke: marks tests as smoke tests",
]

[tool.coverage.run]
omit = [
    "qbitunregistered.py",  # Main entry point script
    "scheduler.py",          # Scheduler entry point
    "tests/*",               # Test files
    "*/venv/*",              # Virtual environments
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
]
